@@ -3,6 +3,10 @@
 S3method(barplot,enrichResult)
 S3method(fortify,enrichResult)
 S3method(fortify,gseaResult)
+S3method(head,enrichResult)
+S3method(head,gseaResult)
+S3method(tail,enrichResult)
+S3method(tail,gseaResult)
 export(EXTID2NAME)
 export(GSEA_internal)
 export(clusterSim)
@@ -28,6 +32,7 @@ export(theme_dose)
 export(upsetplot)
 exportClasses(enrichResult)
 exportClasses(gseaResult)
+exportMethods("[")
 exportMethods("[[")
 exportMethods(cnetplot)
 exportMethods(dotplot)
@@ -116,9 +121,11 @@ importFrom(stats,p.adjust)
 importFrom(stats,phyper)
 importFrom(stats4,plot)
 importFrom(stats4,summary)
+importFrom(utils,head)
 importFrom(utils,read.delim)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,str)
+importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
 importMethodsFrom(AnnotationDbi,columns)
 importMethodsFrom(AnnotationDbi,exists)
