@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/enrichResult.R, R/gseAnalyzer.R
+% Please edit documentation in R/enrichResult.R, R/gseaResult.R
 \docType{methods}
 \name{plot}
 \alias{plot}
